# matlab-fmu

./: .gitignore  README.md  build.bat  matlab_fmu_create.py  setup.m
binaries/: README.md  README.txt
doc/: matlab-fmu-doc.tex  structure.tex
doc/chapters/: about.tex  appendix.tex  example.tex  export.tex  import.tex  installation.tex
license/: FMIPP_LICENSE.txt  MATLAB_FMU_LICENSE.txt
release/: CMakeLists.txt  build_vc140_x64.bat  create_release.py  release_file_list.py  update_files_from_fmipp.py
scripts/: fmi1.py  fmi1_build.bat  fmi2.py  generate_fmu.py  utils.py
test/export/: ControlledRadiator.mo  SimpleController.m  create_fmu.bat  create_fmu.m  inputs.txt  outputs.txt
test/import/: StandaloneRadiator.m  StandaloneRadiator.mo
test/import_cs/: StandaloneRadiator.mo  StandaloneRadiatorCS.m  StandaloneRadiatorCS.mo  StandaloneRadiator_CS.m
test/import_me/: StandaloneRadiator.mo  StandaloneRadiatorME.m  StandaloneRadiatorME.mo  StandaloneRadiator_ME.m
tutorial/export/: ControlledRadiator.mo  README.md  SimpleController.m  create_fmu.m  debug_controller.m
tutorial/export/html/: SimpleController.html  create_fmu.html  debug_controller.html
tutorial/import/: ControlledRadiator.mo  README.md  SimpleController.m
tutorial/import/html/: SimpleController.html
